# crystal

./: CMakeLists.txt
include/crystal/: CStdioFileHandle.h  FileHandle.h
include/linux/crystal/: NativeFileHandle.h
include/windows/: Handle.h
include/windows/crystal/: NativeFileHandle.h
